fix the responsive of the recommendation section so it stays on two cols on tablets

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ h2::after{
     margin-bottom: 225px;
   }
 
-  #recommendations .col-lg-6{
+  #recommendations .col-md-6{
     margin-bottom: 15px;
   }
 }
